# elastic-newsroom

./: .dockerignore  .editorconfig  .env.docker  .flake8  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CLEANUP_TODO.md  CONTRIBUTING.md  DETAILED_TEST_SUMMARY.md  DOCKER.md  DOCKER_QUICKSTART.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  TEST_ANALYSIS.md  UI_DECISION_NEEDED.md  VISUAL_SUMMARY.md  archivist_agent_card.json  archivist_test_response.txt  create_pptx_v2.js  demo_workflow.py  diagnose_newsroom.sh  docker-compose.yml  elastic-newsroom-talk.pptx  env.example  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_detailed_test.py  start_newsroom.sh  test_archivist_direct.py  test_crewai_researcher.py  trigger_story.sh  view_container_logs.sh
agents/: __init__.py  archivist_client.py  base_agent.py  editor.py  news_chief.py  publisher.py  reporter.py  researcher.py  workflow.md
crewai_agents/: Dockerfile  MIGRATION_GUIDE.md  PHASE_REPORTS.md  __init__.py
docs/: A2A_CODE_REVIEW.md  agent-relationships.json  architecture.md  archivist-integration.md  code-patterns.md  code-quality-improvements.md  code-quality-recommendations.md  configuration-guide.md  editor-agent.md  elasticsearch-index-mapping.json  elasticsearch-schema.md  news-chief-agent.md  next-steps-and-improvements.md  publisher-agent.md  reporter-agent.md  researcher-agent.md  sequence-diagram.md  ui-hot-reload.md  ui-mvp-summary.md
mcp_servers/: __init__.py  newsroom_http_server.py  newsroom_tools.py
react-ui/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  start.sh  tailwind.config.js
scripts/: create_elasticsearch_index.py  docker_entrypoint.py  start_event_hub.sh  start_newsroom.sh  view_logs.py
services/: article_api.py  event_hub.py
tests/: conftest.py  old_test_newsroom_workflow.py  run_live_test.py  test_archivist.py  test_archivist_a2a.py  test_archivist_retry.py  test_elasticsearch_index.py  test_event_hub.py  test_event_hub_workflow.py  test_newsroom_workflow.py  test_newsroom_workflow_advanced.py  test_newsroom_workflow_comprehensive.py  test_newsroom_workflow_detailed.py  test_newsroom_workflow_live.py  test_researcher_active_workflow.js  test_researcher_current_status.js  test_researcher_status.js  test_researcher_workflow.js  test_ui_workflow.py  test_utils.py  test_validate_config.py  test_with_mocks.py  test_workflow_pytest.py
ui/: README.md  main.py  pyproject.toml
ui/pages/: __init__.py  article.py  home.py  status.py
ui/services/: news_chief_client.py
ui/state/: app_state.py
(+45 files in other folders)
